--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -12,10 +12,36 @@
   border: 3px solid #ffffff;
 }
 */
-body {
-    padding: 22px;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 27px;
+    padding: 0px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     background-color: #ffffff;
+}
+
+header{
+    background: #000000;
+    height: 50px;
+    margin-bottom: 20px;
+}
+
+footer{
+    background: #000000;
+    height: 50px;
+    margin-top: 20px;
+}
+
+.form{
+    text-align: left;
+    padding-left: 45%;
+}
+
+.footfield{
+    padding-top: 8px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 20;
 }
